# polynom

./: CMakeLists.txt  polynom.g4
base/: CMakeLists.txt  polynomy.h
parser/: CMakeLists.txt  myVisitor.h  polynom.interp  polynom.tokens  polynomBaseVisitor.cpp  polynomBaseVisitor.h  polynomLexer.cpp  polynomLexer.h  polynomLexer.interp  polynomParser.cpp  polynomParser.h  polynomVisitor.cpp  polynomVisitor.h
samples/: CMakeLists.txt  main.cpp
